--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,1 +1,8 @@
 <!-- The main page of playlister -->
+<h1>Main index</h1>
+
+<ul>
+  <li><a href="artists/index.html">Artists - <%= Artist.count %></a></li>
+  <li><a href="genres/index.html">Genres - <%= Genre.count %></a></li>
+  <li><a href="songs/index.html">Song - <%= Song.count %></a></li>
+</ul>
